fix css for high contrast

--- a/appraise/static/css/eyetracking.css
+++ b/appraise/static/css/eyetracking.css
@@ -21,3 +21,6 @@
     text-indent: 0px;
     text-transform: none;*/
 }
+.eyeTrackingContext {
+    color: #9598AA;
+}
